fixed overflow issue

--- a/src/app/back-office/back-office.component.scss
+++ b/src/app/back-office/back-office.component.scss
@@ -1,6 +1,7 @@
 @import '../theme/app.mixin';
 
 .back {
+	max-height: 92vh;
 
 	.menu {
 		min-width: 25vw;
